# BSS-Batch-Manager

./: .gitignore  .gitmodules  LICENSE  README.adoc  README.md  config.csv  main.py  main_test.py  merge_sub_batches.py  netmc.inpt  netmc_2.inpt  pyproject.toml  temp.py  test.py
common_files/: .~lock.netmc_pores_template.csv#  bss_parameters.txt  coulson_mx2.x  coulson_netmc.x  job_submission_template.sh  lammps_netmc_template.inpt  lammps_script.txt  netmc_pores_template.csv  netmc_template.csv  netmc_template.inpt  triangle_raft_template.csv  triangle_raft_template.inpt  visualise_network_netmc.py  visualise_network_tr.py
common_files/BSS-Batch-Manager-Remote/remote_management/: batch_submission_script.py  check_file_exists.sh  job_submission_template.sh
utils/: __init__.py  array_utils.py  batch.py  batch_data.py  batch_output_data.py  batch_submit.py  bss_input_data.py  bss_output_data.py  config.py  custom_types.py  file_utils.py  job.py  lammps_netmc_input_data.py  other_utils.py  plotting_utils.py  result_entry.py  results_data.py  ssh_utils.py  validation_utils.py  var.py  variation_modes.py
