[project]
name = "bss-batch-manager"
version = "0.1.0"
description = "Create batches of BSS simulation jobs"
readme = "README.adoc"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "tzlocal>=5.3.1",
]
authors = [{ name = "Marshall Hunt", email = "marshallhunt@live.com" }]

[project.urls]
Repository = "https://www.github.com/MarshTheBacca/BSS-Batch-Manager"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_any_decorated = false
enable_error_code = [
    "deprecated",
    "explicit-override",
    "ignore-without-code",
    "mutable-override",
    "narrowed-type-not-subtype",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator", "classproperty"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T", "COM812"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
